--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "google-map-react": "^2.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-player": "^2.14.1"
+    "react-player": "^2.14.1",
+    "react-type-animation": "^3.2.0",
+    "three": "^0.160.0",
+    "vanta": "^0.5.24"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
