--- a/server/package.json
+++ b/server/package.json
@@ -3,8 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
@@ -13,6 +15,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.4",
     "express": "^4.18.2",
-    "mongoose": "^8.1.3"
+    "mongoose": "^8.1.3",
+    "mqtt": "^5.3.5",
+    "nodemon": "^3.0.3"
   }
 }
