--- a/server/package.json
+++ b/server/package.json
@@ -15,8 +15,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.4",
     "express": "^4.18.2",
+    "fs": "^0.0.1-security",
     "mongoose": "^8.1.3",
     "mqtt": "^5.3.5",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.3"
   }
 }
