--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.15.3",
+    "@mui/x-charts": "^7.3.2",
     "firebase": "^10.7.1",
     "google-map-react": "^2.2.1",
     "leaflet": "^1.9.4",
