--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,3 @@
 NODE_ENV = development
-MONGO_URI = "mongodb+srv://rover-simulator:rover@rover-simulator.g9lixex.mongodb.net/"
+MONGO_URI = "mongodb+srv://placement:placement@placement.iqd5y5i.mongodb.net/"
 PORT = 8000
